forEnersys/DavePkg/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>The estimated ending date or close date of when the project (i.e. revenue) will be secured</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Potential_Amount__c</fullName>
        <inlineHelpText>The total potential amount of an entire project consisting of one or more opportunities.  This amount should be the total estimated amount of all opportunities.</inlineHelpText>
        <label>Potential Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Potential_Probability__c</fullName>
        <inlineHelpText>The probability of securing the project and the potential revenue.</inlineHelpText>
        <label>Potential Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>The starting date of the project</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Motive Power</fullName>
                </value>
                <value>
                    <fullName>Reserve Power</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Potential_Amount__c</columns>
        <columns>Potential_Probability__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Motive_Power_Projects</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Potential_Amount__c</columns>
        <columns>Potential_Probability__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Motive Power</value>
        </filters>
        <label>Motive Power Projects</label>
    </listViews>
    <listViews>
        <fullName>My_Projects</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Potential_Amount__c</columns>
        <columns>Potential_Probability__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Projects</label>
    </listViews>
    <listViews>
        <fullName>Reserve_Power_Projects</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Potential_Amount__c</columns>
        <columns>Potential_Probability__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Reserve Power</value>
        </filters>
        <label>Reserve Power Projects</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <recordTypes>
        <fullName>EnerSys_Project</fullName>
        <active>true</active>
        <label>EnerSys Project</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>